# butter

./: CMakeLists.txt  README.md
include/butter/: linalg.hpp  random.hpp  simd.hpp  support.hpp  surface.hpp  trig.hpp
src/: rng_table.cpp
src/math/: atan2s.cpp  trig_tables.cpp
